# SyntheticData

./: .gitignore  CMakeLists.txt  CMakePresets.json
